# Bill_Sale_system

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/common/: databasemanager.cpp  databasemanager.h  destuil.cpp  desutil.h  goods.cpp  goods.h  hashsha.cpp  hashsha.h  user.cpp  user.h
src/module/address/: address_controllor.cpp  address_controllor.h  addresswidget.cpp  addresswidget.h  addresswidget.ui
src/module/balance/: balance_controllor.cpp  balance_controllor.h  balancewidget.cpp  balancewidget.h  balancewidget.ui
src/module/cart_in/: cart_controllor.cpp  cart_controllor.h  cartwidget.cpp  cartwidget.h  cartwidget.ui
src/module/deduct/: deduct_controllor.cpp  deduct_controllor.h  deductwidget.cpp  deductwidget.h  deductwidget.ui
src/module/inventory/: inventory_controllor.cpp  inventory_controllor.h  inventorywidget.cpp  inventorywidget.h  inventorywidget.ui
src/module/login/: login_controllor.cpp  login_controllor.h  loginwidget.cpp  loginwidget.h  loginwidget.ui  registerwidget.cpp  registerwidget.h  registerwidget.ui
